@startuml
left to right direction
skinparam linetype ortho

skinparam nodesep 40
skinparam ranksep 50

entity user {
  id: uuid <<PK>>
  name: text
  email: text <<UNIQUE>>
  emailVerified: integer (timestamp_ms)
  image: text
  created_at: timestamp
}

entity account {
  userId: uuid <<FK to user.id>>
  type: text
  provider: text
  providerAccountId: text
  refresh_token: text
  access_token: text
  expires_at: integer
  token_type: text
  scope: text
  id_token: text
  session_state: text
  --
  primary key (provider, providerAccountId)
}

entity session {
  sessionToken: text <<PK>>
  userId: uuid <<FK to user.id>>
  expires: timestamp_ms
}

entity user_preferences {
  id: text <<PK>>
  user_id: uuid <<FK to user.id>> <<UNIQUE>>
  theme: text("system"|"light"|"dark") <<DEFAULT=system>>
  animated_background_disabled: boolean <<DEFAULT=false>>
  push_notifications: boolean <<DEFAULT=false>>
  timezone: text <<DEFAULT=UTC>>
  auto_save_results: boolean <<DEFAULT=true>>
  default_output_format: text("PNG"|"JPEG"|"TIFF"|"BMP") <<DEFAULT=PNG>>
}

entity image {
  id: uuid <<PK>>
  user_id: uuid <<FK to user.id>>
  original_filename: text
  storage_path: text
  url: text
  mime: text
  width: integer
  height: integer
  size_bytes: bigint
  checksum: text
  status: text           -- uploaded/skeletonized/archived/derived
  parent_image_id: uuid  -- nullable, points to original image if derived
  generated_by_job_id: uuid -- nullable, points to job that produced this image
  created_at: timestamp
}

entity run {
  id: uuid <<PK>>
  user_id: uuid <<FK to user.id>>
  name: text
  params: jsonb
  status: text        -- pending/running/failed/completed/cancelled
  created_at: timestamp
  started_at: timestamp
  completed_at: timestamp
}

entity job {
  id: uuid <<PK>>
  run_id: uuid <<FK to run.id>>
  image_id: uuid <<FK to image.id>>
  algorithm: text     -- Zhang-Suen/Guo-Hall/K3M/KMM/Choi-Lam-Siu/Han-La-Rhee/Kwon-Kang/Petrosino-Salvi/Tarabek
  ordinal: integer
  params: jsonb
  status: text        -- queued/processing/completed/failed
  created_at: timestamp
}

entity job_stats {
  job_id: uuid <<PK>> <<FK to job.id>>
  worker_id: text
  last_error: text
  logs: text
  processing_time_ms: integer
  started_at: timestamp
  finished_at: timestamp
  created_at: timestamp
}

' Relationships
user ||-left-o{ session : has
user ||-down--o{ account : has
user ||--down--o{ user_preferences : has preferences
user ||--down--o{ image : owns
user ||--down--o{ run : created
run ||--right--o{ job : contains
image ||--down--o{ job : used_in (input)
job ||--right--o{ image : produces
job ||--|| job_stats : has
image }o-left-|| image : parent_of


@enduml
